vm/42sh_tester/public/error_logs/42sh_810
42sh:1:81: [1m[91merror[0m: syntax error near unexpected token: [1m[37m')'[0m
  1  |  var=9; echo $((var + 1)); echo $((var * 2))echo Level1 && (false || echo Level2)) && (false || echo Final)
     |                                                                                  [1m[91m^[0m
